fix sidebar content overflow

--- a/shared/scss/components/cms/sidebar.scss
+++ b/shared/scss/components/cms/sidebar.scss
@@ -41,7 +41,7 @@
        margin-top: -1px;
        margin-left: -1px;
        border: 1px solid #eee;
-
+       overflow: hidden;
      }
 
   .sidebar-item-author {
